fixing r project filter and button align

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@
   padding: 12px 16px;
   background-color: white;
   cursor: pointer;
+  margin: 3px 1px;
+  /* Helps keep vertical space between buttons when the screen is narrow */
 }
 
 /* Add a grey background color on mouse-over */
